# cwutils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/cwutils/: __init__.py
src/cwutils/datasets/: __init__.py  _base.py
src/cwutils/datasets/data/: __init__.py
src/datasets/: _base.py
tests/: .coverage  conftest.py  test_convert_to_dataframe.py  test_infer_dialect.py  test_load_csv_data.py  test_return_resourse.py
