[project]
name = "cwutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ed", email = "ed@fossx.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.4",
]
